syntax = "proto3";

option go_package = "/suggest";
package suggest;

//search
message SearchRequest {
  string query = 1;
}

message SearchResponse {
    repeated SuggestResponse suggests = 1;
}

//suggest send
message SuggestRequest {
    string LinkUrl = 1 ;
    string Title = 2 ;
    repeated string Queries = 3 ;
}
message SuggestRequestIndex {
    int32 Index = 1 ;
}
message CSV {
    string text = 1;
}

message Empty{
}

// suggest receive
message SuggestResponseArray {
    repeated SuggestResponse Suggests = 1 ;
}


message SuggestResponse {
    int32 ID = 1;
    string LinkUrl = 2 ;
    string Title = 3 ;
    repeated string Queries = 4 ;
    bool Active = 5;
}

message Status {
    string msg = 1;
}

service SuggestService {
    rpc Search(SearchRequest) returns (SearchResponse);

    rpc AddOne(SuggestRequest) returns (Status);
    rpc AddFile(CSV) returns (Status);

    rpc GetOne(SuggestRequestIndex) returns (SuggestResponse);
    rpc Get(Empty) returns (SuggestResponseArray);

    rpc DeleteOne(SuggestRequestIndex) returns (Status);
    rpc Delete(Empty) returns (Status);    
}

